Add pulsar to stack

--- a/app/env.sample
+++ b/app/env.sample
@@ -2,7 +2,7 @@
 # POSTGRES ENV 
 # ===============================================================
 # KC_DB=postgres
-POSTGRES_USER=postgres
+POSTGRES_USER=user
 POSTGRES_DB=postgres
 POSTGRES_PORT=5432 #KC_DB_PORT=5432
 POSTGRES_HOST=postgres_primary # KC_DB_HOST=keycloak_db
@@ -24,4 +24,4 @@ KC_DATA_VOLUME=${PWD}/keycloak/data
 # ===============================================================
 #  ENV 
 # ===============================================================
-DATA_VOLUME=${PWD}
+DATA_VOLUME=${PWD}/data
