Converted postgres_replica to reusable block
commented out ports

--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -9,11 +9,35 @@ x-postgres-common:
     timeout: 5s
     retries: 5
 
+x-postgres_replica:
+  &postgres_replica
+  <<: *postgres-common
+  # ports:
+  #   - 5433:5432
+  environment:
+    PGUSER: replicator
+    PGPASSWORD: replicator_password
+  command: |
+    bash -c "
+    until pg_basebackup --pgdata=/var/lib/postgresql/data -R --slot=replication_slot --host=postgres_primary --port=5432
+    do
+    echo 'Waiting for primary to connect...'
+    sleep 1s
+    done
+    echo 'Backup done, starting replica...'
+    chmod 0700 /var/lib/postgresql/data
+    postgres
+    # - c promote_trigger_file=''
+    "
+  depends_on:
+    - postgres_primary
+
+
 services:
   postgres_primary:
     <<: *postgres-common
-    ports:
-      - 5432:5432
+    # ports:
+    #   - 5432:5432
     environment:
       POSTGRES_USER: user
       POSTGRES_DB: postgres
@@ -34,29 +58,11 @@ services:
       - ./00_init_primary.sql:/docker-entrypoint-initdb.d/00_init.sql
       - ${DATA_VOLUME?[ERROR] ENV VAR DATA_VOLUME NOT SET!}/postgres/primary/data:/var/lib/postgresql/data
 
-  postgres_replica:
-    <<: *postgres-common
-    ports:
-      - 5433:5432
-    environment:
-      PGUSER: replicator
-      PGPASSWORD: replicator_password
+  postgres_replica_1:
+    <<: *postgres_replica
     volumes:
       - ${DATA_VOLUME?[ERROR] ENV VAR DATA_VOLUME NOT SET!}/postgres/replica/data:/var/lib/postgresql/data
-    command: |
-      bash -c "
-      until pg_basebackup --pgdata=/var/lib/postgresql/data -R --slot=replication_slot --host=postgres_primary --port=5432
-      do
-      echo 'Waiting for primary to connect...'
-      sleep 1s
-      done
-      echo 'Backup done, starting replica...'
-      chmod 0700 /var/lib/postgresql/data
-      postgres
-      # - c promote_trigger_file=''
-      "
-    depends_on:
-      - postgres_primary
+
 
 volumes:
   dbdata:
