--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   db:
-    image: postgres:17.5
-    container_name: keycloak_db
-    hostname: kcdb
-    restart: unless-stopped
+    image: postgres:17.6-alpine3.22
+    # container_name: keycloak_db
+    # hostname: kcdb
+    # restart: unless-stopped
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:?ERROR ENV POSTGRES_PASSWORD NOT SET}
       - KC_DB_PASSWORD=${KC_DB_PASSWORD:?ERROR ENV KC_DB_PASSWORD NOT SET}
@@ -11,10 +11,10 @@ services:
       - KC_DB_USERNAME=${KC_DB_USERNAME:?ERROR ENV KC_DB_USERNAME NOT SET}
       - TZ=Africa/Lagos
     volumes:
-      - ${KC_DATA_VOLUME:?ERROR ENV KC_DATA_VOLUME NOT SET}/pgdata:/var/lib/postgresql/data
-      - ${KC_DATA_VOLUME:?ERROR ENV KC_DATA_VOLUME NOT SET}/init-keycloak-db.sh:/docker-entrypoint-initdb.d/01_init_keycloak_db.sh
+      - ${DATA_VOLUME_PG:?ERROR DATA_VOLUME_PG NOT SET}/pg-0/data:/var/lib/postgresql/data
+      - ${CONF_VOLUME:?ERROR CONF_VOLUME NOT SET}/init-keycloak-db.sh:/docker-entrypoint-initdb.d/01_init_keycloak_db.sh
     networks:
-      - app_backend
+      - keycloak_backend_net
     healthcheck:
       test: 'pg_isready -U postgres --dbname=postgres'
       interval: 10s
@@ -22,27 +22,35 @@ services:
       retries: 5
 
   keycloak:
-    #image: quay.io/keycloak/keycloak:26.0.0
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: keycloak_app
-    restart: unless-stopped
+    # image: quay.io/keycloak/keycloak:26.0.0
+    # image: quay.io/keycloak/keycloak:26.3.2
+    image: semicolon/keycloak:26.3.1-0
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
+    # container_name: keycloak_app
+    # restart: unless-stopped
     ports:
       - 8280:8443
       - 8082:8080
       - 9000:9000
     environment:
+      - TZ=Africa/Lagos
       - KC_BOOTSTRAP_ADMIN_USERNAME=${KC_BOOTSTRAP_ADMIN_USERNAME:?ERROR ENV KC_BOOTSTRAP_ADMIN_USERNAME NOT SET}
       - KC_BOOTSTRAP_ADMIN_PASSWORD=${KC_BOOTSTRAP_ADMIN_PASSWORD:?ERROR ENV KC_BOOTSTRAP_ADMIN_PASSWORD NOT SET}
       - KC_DB_URL_HOST=${KC_DB_HOST:?ERROR ENV KC_DB_HOST NOT SET}
-      - KC_DB_URL=jdbc:postgresql://${KC_DB_HOST}:${KC_DB_PORT}/${KC_DB_NAME}
+      # - KC_DB_URL=jdbc:postgresql://${KC_DB_HOST}:${KC_DB_PORT}/${KC_DB_NAME}
+      - KC_DB=${KC_DB:?ERROR ENV KC_DB NOT SET}
+      - KC_DB_HOST=${KC_DB_HOST:?ERROR ENV KC_DB_HOST NOT SET}
+      - KC_DB_NAME=${KC_DB_NAME:?ERROR ENV KC_DB_NAME NOT SET}
+      - KC_DB_PORT=${KC_DB_PORT:?ERROR ENV KC_DB_PORT NOT SET}
       - KC_DB_USERNAME=${KC_DB_USERNAME:?ERROR ENV KC_DB_USERNAME NOT SET}
       - KC_DB_PASSWORD=${KC_DB_PASSWORD:?ERROR ENV KC_DB_PASSWORD NOT SET}
     volumes:
-      - ${KC_DATA_VOLUME:?ERROR ENV KC_DATA_VOLUME NOT SET}/kcdata:/opt/keycloak/data
-      - ${KC_DATA_VOLUME:?ERROR ENV KC_DATA_VOLUME NOT SET}/enumverse-realm-export.json:/opt/keycloak/data/import/enumverse-realm.json
-    command: start --import-realm --optimized --http-enabled true --hostname ${KC_HOSTNAME:?ERROR ENV KC_HOSTNAME NOT SET} --hostname-backchannel-dynamic true --proxy-headers xforwarded
+      # - ${DATA_VOLUME_KC:?ERROR DATA_VOLUME_KC NOT SET}/data:/opt/keycloak/data
+      - ${CONF_VOLUME:?ERROR CONF_VOLUME NOT SET}/enumverse-realm-export.json:/opt/keycloak/data/import/enumverse-realm-export.json
+      # - ./conf/enumverse-realm-export.json:/opt/keycloak/data/import/enumverse-realm-export.json
+    command: start --optimized --verbose --http-enabled true --hostname http://localhost:8082  --hostname-backchannel-dynamic true --proxy-headers xforwarded --import-realm 
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:9000/health/live"]
       # interval: 30s
@@ -50,18 +58,15 @@ services:
       retries: 5
       start_period: 20s
     networks:
-      - app_frontend
-      - app_backend
+      - keycloak_backend_net
+      - keycloak_frontend_net
     depends_on:
-      db:
-        condition: service_healthy
+      - db
+        
 
-volumes:
-  data:
-  db:
 
 networks:
-  app_backend:
-    external: true
-  app_frontend:
-    external: true
+  keycloak_backend_net:
+    # external: true
+  keycloak_frontend_net:
+    # external: true
